# FIXICS

./: .gitignore  AGENTS.md  CODEX.md  CONTEXT-LOAD.md  Dumped Vehicles.txt  FIXICS Exact Vehicle Profiles.txt  FIXICS Parent Vehicle Profiles.txt  FIXICS SQA Profiles - Default Ignored.txt  FIXICS SQA Profiles - LOP.txt  FIXICS SQA Profiles - Light Offroad.txt  FIXICS SQA Profiles - MRAP.txt  FIXICS SQA Profiles - RHS.txt  FIXICS SQA Profiles - Tracked Ignored.txt  FIXICS SQA Profiles - Trucks.txt  FIXICS SQA Profiles - Vanilla.txt  README (4).md  README.md  SQF-Syntax.md  build.ps1  meta.cpp  mod.cpp
.hemtt/: launch.toml  project.toml
addons/main/: $PBOPREFIX$  config.cpp  script_version.hpp  stringtable.xml
addons/main/functions/: fn_applyABSBraking.sqf  fn_applyHandbrakeLock.sqf  fn_applySlopeRollback.sqf  fn_applyVehicleStability.sqf  fn_coordinateVehicleAssists.sqf  fn_dumpVehicleClasses.sqf  fn_hello.sqf  (+24 more)
agents/: README.md
agents/orchestrator/: README.md  policies.yaml  workflow.md
agents/specialist/: README.md  config-agent.md  phase-control.md  physics-agent.md  qa-agent.md  sqf-agent.md  workaround-policy.md
docs/additional-sqf-files/: autoArtilleryFire.sqf  checkCompanyStatus.sqf  common.sqf  commonFunctions.sqf  flyInChopper.sqf  huntRemainingEnemies.sqf  manageGunCrew.sqf  manageJeepCrew.sqf  monitorGroupRespawn.sqf  moveCaptives.sqf  paraDropHelpers.sqf  reviveSystem.sqf  runTest.sqf  scoutArtilleryFire.sqf  trackProjectile.sqf  turnOffLights.sqf  unifiedArtilleryFire.sqf
docs/architecture/: project-map.md
docs/fixes/: fix-log.md  open-issues.md  workaround-registry.md
docs/reference/: known-engine-limits.md  physx-command-ref.md  vehicle-config-ref.md
docs/requirements/: controlled-slip-assist-requirements.md  native-terrain-tire-advisory-requirements.md  per-vehicle-settings-requirements.md  runtime-assist-coordination-requirements.md  terrain-tire-behavior-requirements.md  weather-aware-terrain-tire-effects-requirements.md
docs/superpowers/: README.md
docs/templates/: requirements-packet.md
docs/vehicle-behavior/: README.md  behavior-classifications.md  sqa-evidence-matrix.md  telemetry-snapshot-schema.md  vehicle-behavior-profiles.md
evals/: README.md
evals/suites/: hemtt-check.md  vr-smoke.md
governance/: README.md
governance/audit/: validation-log.md
governance/guardrails/: generated-files.md
governance/policies/: coding-standards.md  phase-control.md  scope-control.md  workaround-policy.md
native/fixics_physics/: CMakeLists.txt  README.md
native/fixics_physics/src/: FIXICSPhysics.cpp
native/fixics_physics/tests/: FIXICSPhysicsTests.cpp
orchestration/: README.md  router.yaml  state.md
prompts/: README.md  registry.yaml
tests/: README.md
tests/integration/: fixics-governance-static.ps1  fixics-vehicle-physics-static.ps1  hemtt-check.md
tests/manual/: vr-smoke.md
tests/unit/: fixics-controlled-slip-recommendation.ps1  fixics-roll-stability-recommendation.ps1  fixics-runtime-assist-recommendation.ps1  fixics-stability-recommendation-mutations.ps1  fixics-stability-recommendation.ps1  fixics-terrain-tire-recommendation.ps1
tools/: README.md  build-native.ps1  build.ps1  check.ps1  export-vehicle-telemetry.ps1  launch-eden.ps1  launch-vr.ps1  live-vehicle-telemetry.py  rpt-parser.ps1  rpt-patterns.ps1  watch-rpt.ps1
(+39 files in other folders)
